Fixed overflow problem with item descriptions.
git-svn-id: https://svn.participatoryculture.org/svn/channelguide2/trunk@605 be7adf91-e322-0410-8f47-e6edb61c52aa

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -868,7 +868,6 @@ margin:15px 15px 0pt;
 .item {
 border-bottom:1px solid #CCCCCC;
 color:#333333;
-height:90px;
 margin:0pt 15px;
 overflow:hidden;
 }
@@ -910,7 +909,6 @@ font-size:16px;
 font-weight:normal;
 }
 div.item div.description {
-height:5.2em;
 margin:0pt;
 overflow:hidden;
 padding:0pt 10px 0pt 0pt;
@@ -2114,7 +2112,6 @@ margin:15px 15px 0pt;
 .item {
 border-bottom:1px solid #CCCCCC;
 color:#333333;
-height:90px;
 margin:0pt 15px;
 overflow:hidden;
 }
@@ -2149,6 +2146,7 @@ float:right;
 .item .title {
 height:1.3em;
 margin-top:5px;
+margin-bottom: 0px;
 overflow:hidden;
 }
 #wrapper .item h2.title {
@@ -2156,7 +2154,8 @@ font-size:16px;
 font-weight:normal;
 }
 div.item div.description {
-height:5.2em;
+        border-right: 1px solid #ccc;
+        width: 477px;
 margin:0pt;
 overflow:hidden;
 padding:0pt 10px 0pt 0pt;
